--- a/src/app/pages/aboutme/aboutme.component.html
+++ b/src/app/pages/aboutme/aboutme.component.html
@@ -1,1 +1,46 @@
-<p>aboutme works!</p>
+<div class="aboutme_wrapper">
+  <div class="whyme_wrapper">
+    <div class="whyme">
+      <div class="about">
+        <h1>Why me?</h1>
+        <ul>
+          <li>I am an innovative stylist keeping pace with industry trends</li>
+          <li>My courses offer cutting-edge techniques</li>
+          <li>I can provide valuable industry insights</li>
+        </ul>
+      </div>
+      <div>
+        <img src="/assets/imgs/barber.png" alt="" width="400px" />
+      </div>
+    </div>
+  </div>
+  <div class="bio">
+    <p>
+      With clippers in one hand and teaching materials in the other, I've made
+      it my mission to elevate the art of barbering. My journey began behind the
+      chair, perfecting cuts and styles for a diverse clientele. Now, I'm
+      equally at home demonstrating techniques to eager students.
+    </p>
+    <p>
+      My barbershop doubles as a learning hub, where the buzz of clippers mixes
+      with the excitement of new knowledge. Through hands-on courses, I share
+      insider tips and techniques that have taken years to master. Whether
+      you're here for a sharp new look or to sharpen your own skills, you'll
+      find that in this space, every cut is a lesson and every lesson cuts to
+      the heart of great barbering.
+    </p>
+  </div>
+
+  <div class="portfolio">
+    <h1>My portfolio</h1>
+    <div class="photos">
+      <img src="/assets/imgs/haircut.png" alt="" />
+      <img src="/assets/imgs/haircut.png" alt="" />
+      <img src="/assets/imgs/haircut.png" alt="" />
+      <img src="/assets/imgs/haircut.png" alt="" />
+      <img src="/assets/imgs/haircut.png" alt="" />
+      <img src="/assets/imgs/haircut.png" alt="" />
+      <img src="/assets/imgs/haircut.png" alt="" />
+    </div>
+  </div>
+</div>
