--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-navbar></app-navbar>
-<app-home></app-home>
 
 <router-outlet />
+
+@if(modalShown()) {
+<app-modal></app-modal>
+}
+
+<app-footer></app-footer>
