--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,6 @@
-main {
+.top-section {
   background-image: url("/assets/imgs/topSection_bg.jpg");
+  background-size: cover;
   padding-top: 73px;
   height: 100vh;
   .controls {
@@ -22,4 +23,36 @@ main {
       }
     }
   }
+}
+
+.offers {
+  :nth-child(2) {
+    margin-bottom: 100px;
+  }
+}
+
+// 0px -20px 75px 150px black
+
+.view_all {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin: 50px 0px 20px 0px;
+  button {
+    font-size: 30px;
+    padding: 30px 65px;
+    border: solid 2.5px;
+    border-radius: 6px;
+    transition: all 200ms ease-in-out;
+    color: black;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+}
+
+.divider_bottom {
+  display: flex;
+  width: 100%;
+  margin-bottom: -1px;
 }
