--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,19 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #7a7a7a;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #232323;
+}
+
 body {
   background: url("/assets/imgs/bodyBG.png");
 }
