--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -15,7 +15,7 @@
             type="text"
             id="modal_name"
             placeholder="Name"
-            formControlName="name"
+            [formControl]="signUpForm.controls.name"
           />
         </div>
 
